# id3-iced-manager

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/id3_parser/: imp.rs  mod.rs
