[package]
name = "id3-iced-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14.0", features = ["image"] }
id3 = "1.13"
rfd = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0.0"
image = "0.25"
log = "0.4"
env_logger = "0.11"
